--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
-  "devDependencies": {
-    "nuxt": "3.0.0-rc.4"
-  }
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"start": "node .output/server/index.mjs"
+	},
+	"devDependencies": {
+		"nuxt": "3.0.0-rc.4"
+	}
 }
